2002-06-06  Marco Pantaleoni  <panta@elasticworld.org>

	* src/modules/posix_m.c: added POSIX functions `dup', `dup2',
	`pipe', `fork', `execv', `execve'.

	* src/modules/posix_m.c: added a `posix.has' hash table, indexed
	by symbols like `#access', `#fork', ... indicating if the named
	functionality is implemented or not.

	* private.h cnf.h.in builtin.c modules/posix_m.c
	modules/Makefile.am: made possible to chose between statically
	linked-in and dynamic for the `posix' modules.

	* compat.h builtin.c elastic.c private.h modules/posix_m.c:
	started implementing a POSIX 1003.1 module.

	* lib.c (EcLibIOErrorClass_New): fixed, it checked for two
	parameters and it received three.

	* configure.in: added --with-module-posix option (possible values:
	no/static/dynamic)

	* configure.in: fixed a problem with MKMODULEFLAGS

	* memory.h memory.c (ec_allocpool): fixed C++ compatibility
	problem: we had a typedef (ec_mempool) with the same name of a
	struct. Now the struct is named ec_mempool_struct.

2002-06-06  Marco Pantaleoni  <panta@elasticworld.org>

	* src/compat.h src/builtin.c src/elastic.c src/private.h
	src/modules/posix_m.c: started implementing a POSIX 1003.1
	module.

	* src/lib.c (EcLibIOErrorClass_New): fixed, it checked for two
	parameters and it received three.

	* src/memory.h src/memory.c (ec_allocpool): fixed C++
	compatibility problem: we had a typedef (ec_mempool) with the same
	name of a struct. Now the struct is named ec_mempool_struct.

2002-06-04  Marco Pantaleoni  <panta@elasticworld.org>

	* switched to library versioning in autoconf/automake...
	  Now libraries are of the form libelastic-X.Y.so.u.v.w

	* src/elastic.c src/builtin.c src/lib.c: added a new instance
	variable to IOError class, containing the posix error (as a
	symbol, like #ENOENT). This is *NOT* a substitute for a hierarchy
	of exceptions derived from IOError! It is only a way to keep track
	of the underlying posix error, when available. We still need to