@@ -7,7 +7,7 @@ dnl   AUTHOR:  Marco Pantaleoni         E-mail: panta@elasticworld.org
 dnl
 dnl   Created: 1999
 dnl
-dnl   $Id: configure.in,v 1.9 2002/06/06 16:10:57 panta Exp $
+dnl   $Id: configure.in,v 1.10 2002/06/06 17:27:57 panta Exp $
 dnl --------------------------------------------------------------------------
 dnl    Copyright (C) 1999-2002 Marco Pantaleoni. All rights reserved.
 dnl
@@ -449,7 +449,7 @@ AC_CHECK_LIB_EFENCE
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h limits.h values.h malloc.h string.h strings.h sys/file.h sys/types.h sys/ioctl.h sys/time.h sys/times.h syslog.h unistd.h errno.h netinet/in.h)
+AC_CHECK_HEADERS(fcntl.h limits.h values.h malloc.h string.h strings.h sys/file.h sys/types.h sys/wait.h sys/ioctl.h sys/time.h sys/times.h syslog.h unistd.h signal.h errno.h netinet/in.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 if test "x$MINGW32" = "xyes" -o "x$CYGWIN" = "xyes" ; then
@@ -463,6 +463,7 @@ AC_C_CONST
 AC_C_INLINE
 AC_TYPE_MODE_T
 AC_TYPE_PID_T
+AC_TYPE_UID_T
 AC_TYPE_SIZE_T
 AC_HEADER_TIME
 AC_CHECK_SIZEOF(unsigned char, 1)
@@ -495,7 +496,7 @@ AC_CHECK_FUNCS(getopt)
 dnl POSIX functions
 AC_CHECK_FUNCS(access open creat close read write fcntl fstat lseek dup dup2)
 AC_CHECK_FUNCS(pipe mkfifo umask fdopen fileno)
-AC_CHECK_FUNCS(fork execl execle execlp execv execve execvp waitpid _exit)
+AC_CHECK_FUNCS(fork execl execle execlp execv execve execvp wait waitpid _exit)
 AC_CHECK_FUNCS(kill sleep pause alarm setuid setgid)
 AC_CHECK_FUNCS(getpid getppid getlogin getuid geteuid cuserid getgid getegid)
 
