@@ -7,7 +7,7 @@
  *
  *   Created: Sat Jan 22 16:05:38 MET 2000
  *
- *   $Id: compat.h,v 1.3 2002/06/06 00:09:24 panta Exp $
+ *   $Id: compat.h,v 1.4 2002/06/06 17:27:57 panta Exp $
  * --------------------------------------------------------------------------
  *    Copyright (C) 2000-2001 Marco Pantaleoni. All rights reserved.
  *
@@ -81,6 +81,10 @@
 
 #if HAVE_SYS_TYPES_H
 #include <sys/types.h>
+#endif
+
+#if HAVE_SYS_WAIT_H
+#include <sys/wait.h>
 #endif
 
 #if HAVE_NETINET_IN_H
